primo servizio per recuperare gli album di una branca

--- a/src/app/components/layout/toolbar/toolbar.component.html
+++ b/src/app/components/layout/toolbar/toolbar.component.html
@@ -1,1 +1,6 @@
-<p>toolbar works!</p>
+<mat-toolbar color="primary">
+    <button mat-button class="app-sidenav-toogle" (click)="toogleSidenav.emit()">
+        <mat-icon>menu</mat-icon>
+    </button>
+    <span class="example-spacer"></span>
+</mat-toolbar>    
