--- a/src/app/components/layout/sidenav/sidenav.component.html
+++ b/src/app/components/layout/sidenav/sidenav.component.html
@@ -6,11 +6,7 @@
                   Eventi
                 </mat-toolbar>
                 <mat-list>
-                  <mat-list-item role="listitem"><a [routerLink]="['/','today']">Oggi</a></mat-list-item>
-                  <mat-list-item role="listitem"><a [routerLink]="['/','birthdays']">Compleanni</a></mat-list-item>
-                  <mat-list-item role="listitem"><a [routerLink]="['/','namedays']"> Onomastici</a></mat-list-item>                  
-                  <mat-list-item role="listitem"><a [routerLink]="['/','days']">Date</a></mat-list-item> 
-                  <mat-list-item role="listitem"><a [routerLink]="['/','all']">Tutti</a></mat-list-item> 
+                  <mat-list-item role="listitem"><a [routerLink]="['/','gallery']">Gallery</a></mat-list-item>                 
                 </mat-list>
             
                 
