grid flex responfive

--- a/src/app/components/albums/albums.component.css
+++ b/src/app/components/albums/albums.component.css
@@ -7,8 +7,8 @@
 
 .item {
     align-self:auto ;
-    flex-grow: 2;
-    flex-shrink: 1;
-    flex-basis: 25%;
-    
+    flex: 1 1 calc(25% - 10px);
+    margin: 5px;
   }
+
+ 
