--- a/src/app/components/albums/new-album/new-album.component.html
+++ b/src/app/components/albums/new-album/new-album.component.html
@@ -1,1 +1,22 @@
-<p>new-album works!</p>
+<h2 mat-dialog-titile>Aggiungi Album</h2>
+<mat-dialog-content>
+    <div class="dialog-container dialog-responsive">
+        <mat-form-field appearance="fill">
+            <mat-label>Descrizione evento</mat-label>
+            <input matInput required minlength="10" maxlength="400"/>        
+           
+          </mat-form-field>
+        <mat-form-field >
+            <mat-label>Data</mat-label>
+            <input matInput  required >
+            <mat-hint>DD/MM/YYYY</mat-hint>
+            <mat-datepicker-toggle matIconSuffix ></mat-datepicker-toggle>
+            
+        </mat-form-field>
+    </div>
+</mat-dialog-content>
+
+<mat-dialog-actions  align="end">
+    <button mat-flat-button color="primary">Ok</button>
+    <button mat-button mat-dialog-close>Cancel</button>
+</mat-dialog-actions>
