--- a/src/app/components/gallery/gallery.component.html
+++ b/src/app/components/gallery/gallery.component.html
@@ -1,6 +1,6 @@
 <p>gallery works!</p>
 <ul>
-    <li><button>Nuovo Album</button></li>
+    <li><button (click)="this.openAlbumDialog()">Nuovo Album</button></li>
     <li><a [routerLink]="['/gallery','lc']">L/C</a></li>
     <li><a [routerLink]="['/gallery','eg']">E/G</a></li>
     <li><a [routerLink]="['/gallery','rs']">R/S</a></li>
