pulsanti form nuovo album

--- a/src/app/components/albums/new-album/new-album.component.html
+++ b/src/app/components/albums/new-album/new-album.component.html
@@ -49,8 +49,7 @@
         
     </div>
 </mat-dialog-content>
-
-<mat-dialog-actions >
-    <button mat-flat-button color="primary" (click)="handleSubmit()">Ok</button>
+<mat-dialog-actions>
+    <button mat-raised-button (click)="handleSubmit()">Ok</button>
     <button mat-button mat-dialog-close>Cancel</button>
 </mat-dialog-actions>
