--- a/src/app/components/albums/album/album.component.html
+++ b/src/app/components/albums/album/album.component.html
@@ -11,7 +11,8 @@
       </p>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button>LIKE</button>
-      <button mat-button>SHARE</button>
+      <button mat-button>Foto</button>
+      <button mat-button>Modifica</button>
+      <button mat-button>Elimina</button>
     </mat-card-actions>
   </mat-card>
