--- a/src/app/components/albums/album/album.component.html
+++ b/src/app/components/albums/album/album.component.html
@@ -1,4 +1,4 @@
-<mat-card class="example-card" appearance="outlined">
+<mat-card appearance="outlined">
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
       <mat-card-title>{{album.title}}</mat-card-title>
@@ -10,9 +10,9 @@
         {{album.title}}
       </p>
     </mat-card-content>
-    <mat-card-actions>
-      <button mat-button>Foto</button>
-      <button mat-button>Modifica</button>
-      <button mat-button>Elimina</button>
+    <mat-card-actions class="row justify-content-center align-items-center">
+      <button [routerLink]="['/gallery/photo','{{album.id}}']" mat-raised-button>Foto</button>
+      <button mat-raised-button>Modifica</button>
+      <button mat-raised-button>Elimina</button>
     </mat-card-actions>
   </mat-card>
