--- a/src/app/components/albums/album/album.component.html
+++ b/src/app/components/albums/album/album.component.html
@@ -11,7 +11,7 @@
       </p>
     </mat-card-content>
     <mat-card-actions class="row justify-content-center align-items-center">
-      <button [routerLink]="['/gallery/photo',album.id]" mat-raised-button>Foto</button>
+      <button [routerLink]="['/gallery/photo/',album.folder]" mat-raised-button>Foto</button>
       <button mat-raised-button>Modifica</button>
       <button mat-raised-button>Elimina</button>
     </mat-card-actions>
