gestione album con titolo

--- a/src/app/components/albums/foto/foto.component.html
+++ b/src/app/components/albums/foto/foto.component.html
@@ -1,5 +1,7 @@
+<h2 >{{this.al.title}}</h2>
 <div class="container">
-        <div class="item"  *ngFor="let ph of this.photo$ | async">
+       
+        <div class="item"  *ngFor="let ph of this.foto">
             
             <mat-card appearance="outlined">
                
