--- a/src/app/components/albums/foto/foto.component.html
+++ b/src/app/components/albums/foto/foto.component.html
@@ -7,9 +7,9 @@
                
                 <img mat-card-image src="{{ph.thumbPathFile}}"  >
                 
-                <mat-card-actions class="row justify-content-center align-items-center">
-                  <button mat-raised-button>Modifica</button>
-                  <button mat-raised-button>Elimina</button>
+                <mat-card-actions class="row  align-items-center">
+                  <button mat-raised-button><mat-icon aria-hidden="false" aria-label="Ruota" fontIcon="sync"></mat-icon>Ruota</button>
+                  <button mat-raised-button><mat-icon aria-hidden="false" aria-label="Ruota" fontIcon="delete"></mat-icon>Elimina</button>
                 </mat-card-actions>
             </mat-card>
 
