--- a/src/app/components/albums/albums.component.html
+++ b/src/app/components/albums/albums.component.html
@@ -2,7 +2,8 @@
     
 <div class="container">
     <div class="item"  *ngFor="let al of this.albums$ | async">
-        <app-album [album]="al"/>
+
+        <app-album [album]="al" (deleteAlbumEmitter)="deleteAlbumListener(al.id)"/>
     </div>
   </div>
 
