--- a/src/app/components/albums/albums.component.css
+++ b/src/app/components/albums/albums.component.css
@@ -2,7 +2,8 @@
     display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-    
+    align-items: flex-start ; 
+    justify-content:center;
 }
 
 .item {
@@ -11,4 +12,20 @@
     margin: 5px;
   }
 
- 
+  .itemHead {
+    
+    flex: 1 1 calc(100%);
+    
+    justify-content: center !important;
+    align-content: center !important;
+    align-items: center !important;
+  }
+
+  .itemHead span{
+   
+    font-size: 25px;
+    margin-right: 10px;
+    
+  }
+   
+   
