new album action 1

--- a/src/app/components/albums/new-album/new-album.component.html
+++ b/src/app/components/albums/new-album/new-album.component.html
@@ -12,7 +12,7 @@
         <div>
         <mat-form-field>
             <mat-label>Branca</mat-label>
-            <input matInput [formControl]="FC_branca" required [(ngModel)]="this.data.branca" readonly="readonly"/>
+            <input matInput [formControl]="FC_branca" required [(ngModel)]="this.data.album.branca" readonly="readonly"/>
             <mat-error>Campo Obligatorio</mat-error>
           </mat-form-field>
           
